Change column layout in order overview. Closes #302

--- a/src/static/pretixcontrol/scss/_orders.scss
+++ b/src/static/pretixcontrol/scss/_orders.scss
@@ -15,6 +15,9 @@
     span.sum-net, span.sum-gross {
         display: none;
     }
+    tfoot {
+        border-top: 2px solid #ddd;
+    }
 }
 
 #sumtoggle {
