--- a/src/pretix/control/templates/pretixcontrol/orders/overview.html
+++ b/src/pretix/control/templates/pretixcontrol/orders/overview.html
@@ -17,11 +17,17 @@
             <thead>
                 <tr>
                     <th>{% trans "Product" %}</th>
-                    <th>{% trans "Total (pending or paid)" %}</th>
-                    <th>{% trans "Payment pending" %}</th>
                     <th>{% trans "Canceled" %}</th>
                     <th>{% trans "Refunded" %}</th>
+                    <th colspan="3">{% trans "Purchased" %}</th>
+                </tr>
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th>{% trans "Pending" %}</th>
                     <th>{% trans "Paid" %}</th>
+                    <th>{% trans "Total" %}</th>
                 </tr>
             </thead>
             <tbody>
@@ -29,26 +35,16 @@
                     {% if tup.0 %}
                         <tr class="category">
                             <th>{{ tup.0.name }}</th>
-                            <th>{{ tup.0.num_total|togglesum }}</th>
-                            <th>{{ tup.0.num_pending|togglesum }}</th>
                             <th>{{ tup.0.num_canceled|togglesum }}</th>
                             <th>{{ tup.0.num_refunded|togglesum }}</th>
+                            <th>{{ tup.0.num_pending|togglesum }}</th>
                             <th>{{ tup.0.num_paid|togglesum }}</th>
+                            <th>{{ tup.0.num_total|togglesum }}</th>
                         </tr>
                     {% endif %}
                     {% for item in tup.1 %}
                         <tr class="item {% if tup.0 %}categorized{% endif %}">
                             <td>{{ item.name }}</td>
-                            <td>
-                                <a href="{{ listurl }}?item={{ item.id }}&amp;provider={{ item.provider }}">
-                                    {{ item.num_total|togglesum }}
-                                </a>
-                            </td>
-                            <td>
-                                <a href="{{ listurl }}?item={{ item.id }}&amp;status=ne&amp;provider={{ item.provider }}">
-                                    {{ item.num_pending|togglesum }}
-                                </a>
-                            </td>
                             <td>
                                 <a href="{{ listurl }}?item={{ item.id }}&amp;status=c&amp;provider={{ item.provider }}">
                                     {{ item.num_canceled|togglesum }}
@@ -60,8 +56,18 @@
                                 </a>
                             </td>
                             <td>
+                                <a href="{{ listurl }}?item={{ item.id }}&amp;status=ne&amp;provider={{ item.provider }}">
+                                    {{ item.num_pending|togglesum }}
+                                </a>
+                            </td>
+                            <td>
                                 <a href="{{ listurl }}?item={{ item.id }}&amp;status=p&amp;provider={{ item.provider }}">
                                     {{ item.num_paid|togglesum }}
+                                </a>
+                            </td>
+                            <td>
+                                <a href="{{ listurl }}?item={{ item.id }}&amp;provider={{ item.provider }}">
+                                    {{ item.num_total|togglesum }}
                                 </a>
                             </td>
                         </tr>
@@ -69,11 +75,11 @@
                             {% for var in item.all_variations %}
                                 <tr class="variation {% if tup.0 %}categorized{% endif %}">
                                     <td>{{ var }}</td>
-                                    <td>{{ var.num_total|togglesum }}</td>
-                                    <td>{{ var.num_pending|togglesum }}</td>
                                     <td>{{ var.num_canceled|togglesum }}</td>
                                     <td>{{ var.num_refunded|togglesum }}</td>
+                                    <td>{{ var.num_pending|togglesum }}</td>
                                     <td>{{ var.num_paid|togglesum }}</td>
+                                    <td>{{ var.num_total|togglesum }}</td>
                                 </tr>
                             {% endfor %}
                         {% endif %}
@@ -83,11 +89,11 @@
             <tfoot>
                 <tr class="total">
                     <th>{% trans "Total" %}</th>
-                    <th>{{ total.num_total|togglesum }}</th>
-                    <th>{{ total.num_pending|togglesum }}</th>
                     <th>{{ total.num_canceled|togglesum }}</th>
                     <th>{{ total.num_refunded|togglesum }}</th>
                     <th>{{ total.num_paid|togglesum }}</th>
+                    <th>{{ total.num_pending|togglesum }}</th>
+                    <th>{{ total.num_total|togglesum }}</th>
                 </tr>
             </tfoot>
         </table>
