Refs #145 -- Multi-use vouchers

--- a/src/pretix/control/templates/pretixcontrol/vouchers/bulk.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/bulk.html
@@ -26,6 +26,7 @@
                 </div>
             </div>
             {% bootstrap_field form.codes layout="horizontal" %}
+            {% bootstrap_field form.max_usages layout="horizontal" %}
         </fieldset>
         <fieldset>
             <legend>{% trans "Voucher details" %}</legend>
