--- a/src/pretix/control/templates/pretixcontrol/vouchers/index.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/index.html
@@ -54,7 +54,7 @@
                 <thead>
                 <tr>
                     <th>{% trans "Voucher code" %}</th>
-                    <th>{% trans "Is redeemed" %}</th>
+                    <th>{% trans "Redemptions" %}</th>
                     <th>{% trans "Expiry" %}</th>
                     <th>{% trans "Tag" %}</th>
                     <th>{% trans "Product" %}</th>
@@ -68,7 +68,7 @@
                             <strong><a href="
                         {% url "control:event.voucher" organizer=request.event.organizer.slug event=request.event.slug voucher=v.id %}">{{ v.code }}</a></strong>
                         </td>
-                        <td>{% if v.redeemed %}{% trans "Yes" %}{% else %}{% trans "No" %}{% endif %}</td>
+                        <td>{{ v.redeemed }} / {{ v.max_usages }}</td>
                         <td>{{ v.valid_until|date }}</td>
                         <td>
                             {{ v.tag }}
