--- a/src/pretix/presale/templates/pretixpresale/event/voucher.html
+++ b/src/pretix/presale/templates/pretixpresale/event/voucher.html
@@ -79,9 +79,14 @@
                                             {% if var.cached_availability.0 == 100 %}
                                                 <div class="col-md-2 col-xs-6 availability-box available radio-box">
                                                     <label>
-                                                        <input type="radio" name="_voucher_item"
-                                                                {% if options == 1 %}checked="checked"{% endif %}
-                                                                value="variation_{{ item.id }}_{{ var.id }}">
+                                                        {% if max_times > 1 %}
+                                                            <input type="number" class="form-control input-item-count" placeholder="0" min="0"
+                                                                   max="{{ item.order_max }}" name="variation_{{ item.id }}_{{ var.id }}">
+                                                        {% else %}
+                                                            <input type="radio" name="_voucher_item"
+                                                                    {% if options == 1 %}checked="checked"{% endif %}
+                                                                    value="variation_{{ item.id }}_{{ var.id }}">
+                                                        {% endif %}
                                                     </label>
                                                 </div>
                                             {% else %}
@@ -128,9 +133,14 @@
                                 {% if item.cached_availability.0 == 100 %}
                                     <div class="col-md-2 col-xs-6 availability-box available radio-box">
                                         <label>
-                                            <input type="radio" name="_voucher_item"
-                                                    {% if options == 1 %}checked="checked"{% endif %}
-                                                    value="item_{{ item.id }}">
+                                            {% if max_times > 1 %}
+                                                <input type="number" class="form-control input-item-count" placeholder="0" min="0"
+                                                       max="{{ item.order_max }}" name="item_{{ item.id }}">
+                                            {% else %}
+                                                <input type="radio" name="_voucher_item"
+                                                        {% if options == 1 %}checked="checked"{% endif %}
+                                                        value="item_{{ item.id }}">
+                                            {% endif %}
                                         </label>
                                     </div>
                                 {% else %}
