--- a/src/pretix/control/templates/pretixcontrol/order/change.html
+++ b/src/pretix/control/templates/pretixcontrol/order/change.html
@@ -36,6 +36,12 @@
             If an invoice is attached to the order, a cancellation will be created together with a new invoice.
         {% endblocktrans %}
     </p>
+    <p>
+        {% blocktrans trimmed %}
+            If you chose "split into new order" for multiple positions, they will be all split in one second order
+            together, not multiple orders.
+        {% endblocktrans %}
+    </p>
     <div class="alert alert-warning"><strong>
         {% blocktrans trimmed %}
             Please use this tool carefully. Changes you make here are not reversible. Also, if you change an order
@@ -116,6 +122,13 @@
                                 {% else %}
                                     {% trans "no taxes apply" %}
                                 {% endif %}
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input name="{{ position.form.prefix }}-operation" type="radio" value="split"
+                                        {% if position.form.operation.value == "split" %}checked="checked"{% endif %}>
+                                {% trans "Split into new order" %}
                             </label>
                         </div>
                         <div class="radio">
