--- a/src/pretix/control/templates/pretixcontrol/vouchers/detail.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/detail.html
@@ -27,7 +27,15 @@
             {% bootstrap_field form.valid_until layout="horizontal" %}
             {% bootstrap_field form.block_quota layout="horizontal" %}
             {% bootstrap_field form.allow_ignore_quota layout="horizontal" %}
-            {% bootstrap_field form.price layout="horizontal" %}
+            <div class="form-group">
+                <label class="col-md-3 control-label" for="id_tag">{% trans "Price effect" %}</label>
+                <div class="col-md-5">
+                    {% bootstrap_field form.price_mode show_label=False form_group_class="" %}
+                </div>
+                <div class="col-md-4">
+                    {% bootstrap_field form.value show_label=False form_group_class="" %}
+                </div>
+            </div>
             {% bootstrap_field form.itemvar layout="horizontal" %}
             <div class="form-group">
                 <div class="col-md-9 col-md-offset-3">
