Fix #179 -- New flexbox layout for dashboard (#344)
* Use flexbox for better tiling

Replaces 'width' by 'display_size' and reduces sorting complexity.

* CSS improvements, Responsiveness

--- a/src/pretix/control/templates/pretixcontrol/dashboard.html
+++ b/src/pretix/control/templates/pretixcontrol/dashboard.html
@@ -5,7 +5,7 @@
 	<h1>{% trans "Dashboard" %}</h1>
     <div class="row dashboard">
         {% for w in widgets %}
-            <div class="col-xs-12 col-sm-{% if w.width > 6 %}12{% else %}6{% endif %} col-md-{{ w.width }}">
+            <div class="widget-container widget-{{ w.display_size|default:"small" }}">
                 {% if w.url %}
                     <a href="{{ w.url }}" class="widget">
                         {{ w.content|safe }}
